--- a/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
@@ -57,6 +57,7 @@
                     android:layout_marginEnd="28dp"
                     android:layout_marginStart="9dp"
                     android:text="_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toTopOf="@+id/textView4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -101,7 +102,7 @@
                     android:layout_marginTop="17dp"
                     android:fontFamily="@font/skranji"
                     android:text="piro?"
-                    android:textSize="17sp"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView12"
                     app:layout_constraintStart_toEndOf="@+id/textView4"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
@@ -130,7 +131,7 @@
                     android:layout_marginTop="17dp"
                     android:fontFamily="@font/skranji"
                     android:text="Biji"
-                    android:textSize="17sp"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView12"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.04"
@@ -324,17 +325,17 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="9dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="24dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/skranji"
                     android:text="Rp"
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
                     app:layout_constraintEnd_toStartOf="@+id/textView14"
-                    app:layout_constraintHorizontal_bias="0.523"
+                    app:layout_constraintHorizontal_bias="0.25"
                     app:layout_constraintStart_toEndOf="@+id/textView22"
                     app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
@@ -343,7 +344,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="12dp"
-                    android:layout_marginEnd="188dp"
+                    android:layout_marginEnd="230dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/skranji"
                     android:text="0"
