--- a/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
@@ -57,6 +57,7 @@
                     android:layout_marginEnd="28dp"
                     android:layout_marginStart="9dp"
                     android:text="_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toTopOf="@+id/textView4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -97,7 +98,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="14dp"
-                    android:layout_marginStart="92dp"
+                    android:layout_marginStart="120dp"
                     android:layout_marginTop="17dp"
                     android:fontFamily="@font/skranji"
                     android:text="piro?"
@@ -113,7 +114,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:layout_marginEnd="42dp"
-                    android:layout_marginStart="48dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="Rp.13.000 /Kg"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -134,7 +135,7 @@
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView12"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.276"
+                    app:layout_constraintHorizontal_bias="0.03"
                     app:layout_constraintStart_toEndOf="@+id/textView11"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
                     app:layout_constraintVertical_bias="0.0" />
@@ -325,7 +326,7 @@
                     android:layout_width="0dp"
                     android:layout_height="32dp"
                     android:layout_marginBottom="9dp"
-                    android:layout_marginStart="11dp"
+                    android:layout_marginStart="24dp"
                     android:layout_marginTop="15dp"
                     android:fontFamily="@font/skranji"
                     android:text="Rp"
@@ -340,7 +341,8 @@
                     android:layout_width="100dp"
                     android:layout_height="32dp"
                     android:layout_marginBottom="9dp"
-                    android:layout_marginEnd="178dp"
+                    android:layout_marginEnd="150dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="15dp"
                     android:fontFamily="@font/skranji"
                     android:text="0"
