--- a/SokaJamur/app/src/main/res/layout/list_row.xml
+++ b/SokaJamur/app/src/main/res/layout/list_row.xml
@@ -4,25 +4,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
-
+    android:orientation="horizontal"
+    android:background="#d5d5d5">
+    <android.support.v7.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="5dp"
+    android:padding="5dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#d5d5d5">
 
         <ImageView
             android:id="@+id/gambar"
             android:layout_width="120dp"
             android:layout_height="100dp"
+            android:layout_gravity="center_horizontal|center"
+            android:foregroundGravity="center"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/jamurtiram" />
 
         <TextView
             android:id="@+id/judul"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:text="TextView" />
     </LinearLayout>
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
