--- a/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
@@ -142,7 +142,7 @@
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintLayout3"
-                android:layout_width="368dp"
+                android:layout_width="match_parent"
                 android:layout_height="288dp"
                 android:layout_marginBottom="23dp"
                 android:layout_marginEnd="8dp"
@@ -172,7 +172,7 @@
                     android:id="@+id/editText"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_marginEnd="88dp"
+                    android:layout_marginEnd="24dp"
                     android:ems="10"
                     android:enabled="false"
                     android:inputType="textPersonName"
@@ -183,9 +183,8 @@
                     android:id="@+id/editText2"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_marginEnd="88dp"
+                    android:layout_marginEnd="24dp"
                     android:ems="10"
-                    android:enabled="false"
                     android:inputType="textPersonName"
                     app:layout_constraintBottom_toTopOf="@+id/editText3"
                     app:layout_constraintEnd_toEndOf="parent" />
@@ -194,7 +193,7 @@
                     android:id="@+id/editText3"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_marginEnd="88dp"
+                    android:layout_marginEnd="24dp"
                     android:ems="10"
                     android:enabled="false"
                     android:inputType="textPersonName"
@@ -206,7 +205,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginBottom="44dp"
-                    android:layout_marginEnd="88dp"
+                    android:layout_marginEnd="24dp"
                     android:ems="10"
                     android:inputType="number"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
@@ -217,7 +216,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="Nama"
                     android:textSize="17sp"
@@ -233,7 +232,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="Alamat"
                     android:textSize="17sp"
@@ -247,7 +246,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="No. Hp"
                     android:textSize="17sp"
@@ -262,7 +261,7 @@
                     android:layout_height="40dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="Jumlah"
                     android:textSize="17sp"
@@ -276,7 +275,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="12dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="Harga"
                     android:textSize="17sp"
@@ -287,7 +286,7 @@
                     android:id="@+id/textView23"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="4dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
@@ -328,26 +327,26 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="9dp"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="60dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/skranji"
                     android:text="Rp"
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
                     app:layout_constraintEnd_toStartOf="@+id/textView14"
-                    app:layout_constraintHorizontal_bias="0.25"
+                    app:layout_constraintHorizontal_bias="0.58"
                     app:layout_constraintStart_toEndOf="@+id/textView22"
                     app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
                 <TextView
                     android:id="@+id/textView14"
-                    android:layout_width="wrap_content"
+                    android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="12dp"
-                    android:layout_marginEnd="230dp"
+                    android:layout_marginEnd="70dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/skranji"
                     android:text="0"
