--- a/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
@@ -143,7 +143,7 @@
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintLayout3"
-                android:layout_width="368dp"
+                android:layout_width="match_parent"
                 android:layout_height="272dp"
                 android:layout_marginBottom="23dp"
                 android:layout_marginEnd="8dp"
@@ -173,7 +173,7 @@
                     android:id="@+id/editText"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_marginEnd="88dp"
+                    android:layout_marginEnd="24dp"
                     android:ems="10"
                     android:enabled="false"
                     android:inputType="textPersonName"
@@ -184,9 +184,8 @@
                     android:id="@+id/editText2"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_marginEnd="88dp"
+                    android:layout_marginEnd="24dp"
                     android:ems="10"
-                    android:enabled="false"
                     android:inputType="textPersonName"
                     app:layout_constraintBottom_toTopOf="@+id/editText3"
                     app:layout_constraintEnd_toEndOf="parent" />
@@ -195,7 +194,7 @@
                     android:id="@+id/editText3"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_marginEnd="88dp"
+                    android:layout_marginEnd="24dp"
                     android:ems="10"
                     android:enabled="false"
                     android:inputType="textPersonName"
@@ -207,7 +206,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginBottom="44dp"
-                    android:layout_marginEnd="88dp"
+                    android:layout_marginEnd="24dp"
                     android:ems="10"
                     android:inputType="textPersonName"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
@@ -218,7 +217,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginEnd="13dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="Nama"
                     android:textSize="17sp"
@@ -232,7 +231,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="Alamat"
                     android:textSize="17sp"
@@ -246,7 +245,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="No. Hp"
                     android:textSize="17sp"
@@ -260,7 +259,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="Jumlah"
                     android:textSize="17sp"
@@ -274,7 +273,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="25dp"
                     android:layout_marginBottom="12dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="Harga"
                     android:textSize="17sp"
@@ -283,11 +282,10 @@
 
                 <TextView
                     android:id="@+id/textView23"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="30dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji"
                     android:text="Metode Pembayaran"
                     android:textSize="17sp"
@@ -298,13 +296,12 @@
 
                 <Spinner
                     android:id="@+id/cbBox"
-                    android:layout_width="174dp"
+                    android:layout_width="160dp"
                     android:layout_height="27dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="16dp"
                     android:background="@drawable/border_style"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
@@ -326,16 +323,17 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="32dp"
                     android:layout_marginBottom="9dp"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="60dp"
                     android:layout_marginTop="15dp"
                     android:fontFamily="@font/skranji"
                     android:text="Rp"
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
                     app:layout_constraintEnd_toStartOf="@+id/textView14"
+                    app:layout_constraintHorizontal_bias="0.58"
                     app:layout_constraintStart_toEndOf="@+id/textView22"
                     app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
@@ -344,7 +342,7 @@
                     android:layout_width="100dp"
                     android:layout_height="32dp"
                     android:layout_marginBottom="9dp"
-                    android:layout_marginEnd="150dp"
+                    android:layout_marginEnd="70dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="15dp"
                     android:fontFamily="@font/skranji"
