--- a/SokaJamur/app/src/main/res/layout/activity_artikel.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_artikel.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#d5d5d5">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -29,17 +30,5 @@
                 android:text="TextView" />
         </LinearLayout>
     </ScrollView>
-
-    <TextView
-        android:id="@+id/isi"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:textSize="25sp"
-        android:text="isinya"
-        tools:layout_editor_absoluteX="389dp"
-        tools:layout_editor_absoluteY="5dp"
-        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
