--- a/SokaJamur/app/src/main/res/layout/activity_pesanan_saya.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_pesanan_saya.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.reppernews.sokajamur.PesananSaya"
-    android:background="#d5d5d5">
+    android:background="#d5d5d5"
+    android:orientation="vertical">
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+
 
             <TextView
                 android:id="@+id/textView24"
@@ -41,9 +39,9 @@
                     android:layout_marginStart="9dp" />
 
             </RelativeLayout>
-        </LinearLayout>
 
 
 
 
-</ScrollView>
+
+</LinearLayout>
