--- a/SokaJamur/app/src/main/res/layout/activity_artikel.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_artikel.xml
@@ -28,6 +28,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView" />
+
+            <TextView
+                android:id="@+id/isi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView" />
         </LinearLayout>
     </ScrollView>
 
