--- a/SokaJamur/app/src/main/res/layout/activity_detail_artikel_user.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_detail_artikel_user.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailArtikel"
+    tools:context=".DetailArtikelUser"
     android:background="#d5d5d5">
     <ScrollView
         android:layout_width="match_parent"
@@ -39,4 +39,4 @@
                 android:text="isi" />
         </LinearLayout>
     </ScrollView>
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
