--- a/SokaJamur/app/src/main/res/layout/content_home_admin.xml
+++ b/SokaJamur/app/src/main/res/layout/content_home_admin.xml
@@ -8,5 +8,19 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.reppernews.sokajamur.HomeAdmin"
     tools:showIn="@layout/app_bar_home_admin">
+    <RelativeLayout
+        android:layout_width="350dp"
+        android:layout_height="550dp">
+
+        <ListView
+            android:id="@+id/listView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="10dp" />
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
