--- a/SokaJamur/app/src/main/res/layout/activity_detail_pesanan.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_detail_pesanan.xml
@@ -296,17 +296,17 @@
         app:layout_constraintVertical_bias="0.74" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnBatal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="160dp"
-        android:layout_marginStart="136dp"
+        android:layout_marginStart="140dp"
         android:layout_marginTop="8dp"
         android:text="Batalkan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.19"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.953" />
