--- a/SokaJamur/app/src/main/res/layout/activity_detail_pesanan.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_detail_pesanan.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d5d5d5"
     tools:context="com.reppernews.sokajamur.DetailPesanan">
 
     <TextView
@@ -300,14 +301,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginStart="140dp"
         android:layout_marginTop="8dp"
         android:text="Batalkan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.953" />
+        app:layout_constraintVertical_bias="0.944" />
 </android.support.constraint.ConstraintLayout>
