--- a/SokaJamur/app/src/main/res/layout/activity_detail_pesanan_user.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_detail_pesanan_user.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#d5d5d5"
     android:layout_height="match_parent"
     tools:context="com.reppernews.sokajamur.DetailPesanan">
 
@@ -294,4 +295,44 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.74" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.96">
+
+        <Button
+            android:id="@+id/proses"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="Status Diproses"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/kirim"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="Status Terkirim"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/btnbatal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="Batalkan"
+            android:textSize="12sp" />
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
