--- a/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
@@ -358,13 +358,15 @@
 
             <Button
                 android:id="@+id/btPilih2"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:background="#6c6c6c"
+                android:fontFamily="@font/skranji_bold"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="#6c6c6c"
-                android:textColor="#ffffff"
-                android:fontFamily="@font/skranji_bold"
-                android:text="Hitung" />
+
+                android:text="Hitung"
+                android:textColor="#ffffff" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -374,26 +376,28 @@
 
                 <Button
                     android:id="@+id/btPilih3"
+                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:background="#6c6c6c"
-                    android:textColor="#ffffff"
                     android:fontFamily="@font/skranji_bold"
                     android:text="Pesan"
+                    android:textColor="#ffffff"
                     android:visibility="gone" />
 
                 <Button
                     android:id="@+id/btPilih4"
+                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:background="#6c6c6c"
-                    android:textColor="#ffffff"
                     android:fontFamily="@font/skranji_bold"
                     android:text="Batal"
+                    android:textColor="#ffffff"
                     android:visibility="gone" />
             </LinearLayout>
 
