--- a/SokaJamur/app/src/main/res/layout/admin_barang.xml
+++ b/SokaJamur/app/src/main/res/layout/admin_barang.xml
@@ -20,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Jamur"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -188,7 +189,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Baglog"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout2"
